database/sqlengine/sqlparser.output
语法

    0 $accept: Program $end

    1 Program: %empty
    2        | Program Stmt

    3 Stmt: SysStmt ';'
    4     | QueryStmt ';'

    5 SysStmt: CREATE DATABASE IDENTIFIER
    6        | DROP DATABASE IDENTIFIER
    7        | SHOW DATABASES
    8        | USE IDENTIFIER
    9        | SHOW TABLES
   10        | CREATE TABLE IDENTIFIER '(' FieldList ')'
   11        | DROP TABLE IDENTIFIER
   12        | DESC IDENTIFIER

   13 FieldList: Field
   14          | FieldList ',' Field

   15 Field: IDENTIFIER Type
   16      | IDENTIFIER Type NOT NUL
   17      | PRIMARY KEY '(' IDENTIFIER ')'
   18      | CHECK '(' CheckClauseList ')'

   19 Type: INT '(' VALUE_INT ')'
   20     | CHAR '(' VALUE_INT ')'
   21     | VARCHAR '(' VALUE_INT ')'

   22 QueryStmt: INSERT INTO IDENTIFIER VALUES ValueLists
   23          | DELETE FROM IDENTIFIER WHERE WhereClauseList
   24          | UPDATE IDENTIFIER SET SetClause WHERE WhereClauseList
   25          | SELECT Selector FROM TableList WHERE WhereClauseList

   26 ValueLists: '(' ValueList ')'
   27           | ValueLists ',' '(' ValueList ')'

   28 ValueList: Value
   29          | ValueList ',' Value

   30 Value: VALUE_INT
   31      | VALUE_STRING
   32      | NUL

   33 WhereClause: Column Operand Column
   34            | Column Operand Value
   35            | Column IS NUL
   36            | Column IS NOT NUL

   37 WhereClauseList: WhereClause
   38                | WhereClauseList AND WhereClause

   39 CheckClause: Column IN '(' ValueList ')'
   40            | Column Operand Value

   41 CheckClauseList: CheckClause
   42                | CheckClauseList AND CheckClause

   43 SetClause: IDENTIFIER '=' Value
   44          | SetClause ',' IDENTIFIER '=' Value

   45 Column: IDENTIFIER '.' IDENTIFIER
   46       | IDENTIFIER

   47 Selector: '*'
   48         | SelectorList

   49 SelectorList: Column
   50             | SelectorList ',' Column

   51 Operand: '='
   52        | NOT_EQUAL
   53        | '<'
   54        | '>'
   55        | LESS_EQUAL
   56        | GREATER_EQUAL

   57 TableList: IDENTIFIER
   58          | TableList ',' IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 17 18 19 20 21 26 27 39
')' (41) 10 17 18 19 20 21 26 27 39
'*' (42) 47
',' (44) 14 27 29 44 50 58
'.' (46) 45
';' (59) 3 4
'<' (60) 53
'=' (61) 43 44 51
'>' (62) 54
error (256)
CREATE (258) 5 10
DROP (259) 6 11
SHOW (260) 7 9
USE (261) 8
DESC (262) 12
DATABASE (263) 5 6
DATABASES (264) 7
TABLE (265) 10 11
TABLES (266) 9
INT (267) 19
VARCHAR (268) 21
CHAR (269) 20
IS (270) 35 36
NOT (271) 16 36
NUL (272) 16 32 35 36
PRIMARY (273) 17
KEY (274) 17
CHECK (275) 18
IN (276) 39
INSERT (277) 22
INTO (278) 22
VALUES (279) 22
DELETE (280) 23
FROM (281) 23 25
UPDATE (282) 24
SET (283) 24
WHERE (284) 23 24 25
SELECT (285) 25
AND (286) 38 42
NOT_EQUAL (287) 52
GREATER_EQUAL (288) 56
LESS_EQUAL (289) 55
IDENTIFIER (290) 5 6 8 10 11 12 15 16 17 22 23 24 43 44 45 46 57 58
VALUE_STRING (291) 31
VALUE_INT (292) 19 20 21 30


Nonterminals, with rules where they appear

$accept (47)
    左： 0
Program (48)
    左： 1 2, 右： 0 2
Stmt (49)
    左： 3 4, 右： 2
SysStmt (50)
    左： 5 6 7 8 9 10 11 12, 右： 3
FieldList (51)
    左： 13 14, 右： 10 14
Field (52)
    左： 15 16 17 18, 右： 13 14
Type (53)
    左： 19 20 21, 右： 15 16
QueryStmt (54)
    左： 22 23 24 25, 右： 4
ValueLists (55)
    左： 26 27, 右： 22 27
ValueList (56)
    左： 28 29, 右： 26 27 29 39
Value (57)
    左： 30 31 32, 右： 28 29 34 40 43 44
WhereClause (58)
    左： 33 34 35 36, 右： 37 38
WhereClauseList (59)
    左： 37 38, 右： 23 24 25 38
CheckClause (60)
    左： 39 40, 右： 41 42
CheckClauseList (61)
    左： 41 42, 右： 18 42
SetClause (62)
    左： 43 44, 右： 24 44
Column (63)
    左： 45 46, 右： 33 34 35 36 39 40 49 50
Selector (64)
    左： 47 48, 右： 25
SelectorList (65)
    左： 49 50, 右： 48 50
Operand (66)
    左： 51 52 53 54 55 56, 右： 33 34 40
TableList (67)
    左： 57 58, 右： 25 58


State 0

    0 $accept: . Program $end

    $default  reduce using rule 1 (Program)

    Program  转到状态 1


State 1

    0 $accept: Program . $end
    2 Program: Program . Stmt

    $end    shift, and go to state 2
    CREATE  shift, and go to state 3
    DROP    shift, and go to state 4
    SHOW    shift, and go to state 5
    USE     shift, and go to state 6
    DESC    shift, and go to state 7
    INSERT  shift, and go to state 8
    DELETE  shift, and go to state 9
    UPDATE  shift, and go to state 10
    SELECT  shift, and go to state 11

    Stmt       转到状态 12
    SysStmt    转到状态 13
    QueryStmt  转到状态 14


State 2

    0 $accept: Program $end .

    $default  接受


State 3

    5 SysStmt: CREATE . DATABASE IDENTIFIER
   10        | CREATE . TABLE IDENTIFIER '(' FieldList ')'

    DATABASE  shift, and go to state 15
    TABLE     shift, and go to state 16


State 4

    6 SysStmt: DROP . DATABASE IDENTIFIER
   11        | DROP . TABLE IDENTIFIER

    DATABASE  shift, and go to state 17
    TABLE     shift, and go to state 18


State 5

    7 SysStmt: SHOW . DATABASES
    9        | SHOW . TABLES

    DATABASES  shift, and go to state 19
    TABLES     shift, and go to state 20


State 6

    8 SysStmt: USE . IDENTIFIER

    IDENTIFIER  shift, and go to state 21


State 7

   12 SysStmt: DESC . IDENTIFIER

    IDENTIFIER  shift, and go to state 22


State 8

   22 QueryStmt: INSERT . INTO IDENTIFIER VALUES ValueLists

    INTO  shift, and go to state 23


State 9

   23 QueryStmt: DELETE . FROM IDENTIFIER WHERE WhereClauseList

    FROM  shift, and go to state 24


State 10

   24 QueryStmt: UPDATE . IDENTIFIER SET SetClause WHERE WhereClauseList

    IDENTIFIER  shift, and go to state 25


State 11

   25 QueryStmt: SELECT . Selector FROM TableList WHERE WhereClauseList

    IDENTIFIER  shift, and go to state 26
    '*'         shift, and go to state 27

    Column        转到状态 28
    Selector      转到状态 29
    SelectorList  转到状态 30


State 12

    2 Program: Program Stmt .

    $default  reduce using rule 2 (Program)


State 13

    3 Stmt: SysStmt . ';'

    ';'  shift, and go to state 31


State 14

    4 Stmt: QueryStmt . ';'

    ';'  shift, and go to state 32


State 15

    5 SysStmt: CREATE DATABASE . IDENTIFIER

    IDENTIFIER  shift, and go to state 33


State 16

   10 SysStmt: CREATE TABLE . IDENTIFIER '(' FieldList ')'

    IDENTIFIER  shift, and go to state 34


State 17

    6 SysStmt: DROP DATABASE . IDENTIFIER

    IDENTIFIER  shift, and go to state 35


State 18

   11 SysStmt: DROP TABLE . IDENTIFIER

    IDENTIFIER  shift, and go to state 36


State 19

    7 SysStmt: SHOW DATABASES .

    $default  reduce using rule 7 (SysStmt)


State 20

    9 SysStmt: SHOW TABLES .

    $default  reduce using rule 9 (SysStmt)


State 21

    8 SysStmt: USE IDENTIFIER .

    $default  reduce using rule 8 (SysStmt)


State 22

   12 SysStmt: DESC IDENTIFIER .

    $default  reduce using rule 12 (SysStmt)


State 23

   22 QueryStmt: INSERT INTO . IDENTIFIER VALUES ValueLists

    IDENTIFIER  shift, and go to state 37


State 24

   23 QueryStmt: DELETE FROM . IDENTIFIER WHERE WhereClauseList

    IDENTIFIER  shift, and go to state 38


State 25

   24 QueryStmt: UPDATE IDENTIFIER . SET SetClause WHERE WhereClauseList

    SET  shift, and go to state 39


State 26

   45 Column: IDENTIFIER . '.' IDENTIFIER
   46       | IDENTIFIER .

    '.'  shift, and go to state 40

    $default  reduce using rule 46 (Column)


State 27

   47 Selector: '*' .

    $default  reduce using rule 47 (Selector)


State 28

   49 SelectorList: Column .

    $default  reduce using rule 49 (SelectorList)


State 29

   25 QueryStmt: SELECT Selector . FROM TableList WHERE WhereClauseList

    FROM  shift, and go to state 41


State 30

   48 Selector: SelectorList .
   50 SelectorList: SelectorList . ',' Column

    ','  shift, and go to state 42

    $default  reduce using rule 48 (Selector)


State 31

    3 Stmt: SysStmt ';' .

    $default  reduce using rule 3 (Stmt)


State 32

    4 Stmt: QueryStmt ';' .

    $default  reduce using rule 4 (Stmt)


State 33

    5 SysStmt: CREATE DATABASE IDENTIFIER .

    $default  reduce using rule 5 (SysStmt)


State 34

   10 SysStmt: CREATE TABLE IDENTIFIER . '(' FieldList ')'

    '('  shift, and go to state 43


State 35

    6 SysStmt: DROP DATABASE IDENTIFIER .

    $default  reduce using rule 6 (SysStmt)


State 36

   11 SysStmt: DROP TABLE IDENTIFIER .

    $default  reduce using rule 11 (SysStmt)


State 37

   22 QueryStmt: INSERT INTO IDENTIFIER . VALUES ValueLists

    VALUES  shift, and go to state 44


State 38

   23 QueryStmt: DELETE FROM IDENTIFIER . WHERE WhereClauseList

    WHERE  shift, and go to state 45


State 39

   24 QueryStmt: UPDATE IDENTIFIER SET . SetClause WHERE WhereClauseList

    IDENTIFIER  shift, and go to state 46

    SetClause  转到状态 47


State 40

   45 Column: IDENTIFIER '.' . IDENTIFIER

    IDENTIFIER  shift, and go to state 48


State 41

   25 QueryStmt: SELECT Selector FROM . TableList WHERE WhereClauseList

    IDENTIFIER  shift, and go to state 49

    TableList  转到状态 50


State 42

   50 SelectorList: SelectorList ',' . Column

    IDENTIFIER  shift, and go to state 26

    Column  转到状态 51


State 43

   10 SysStmt: CREATE TABLE IDENTIFIER '(' . FieldList ')'

    PRIMARY     shift, and go to state 52
    CHECK       shift, and go to state 53
    IDENTIFIER  shift, and go to state 54

    FieldList  转到状态 55
    Field      转到状态 56


State 44

   22 QueryStmt: INSERT INTO IDENTIFIER VALUES . ValueLists

    '('  shift, and go to state 57

    ValueLists  转到状态 58


State 45

   23 QueryStmt: DELETE FROM IDENTIFIER WHERE . WhereClauseList

    IDENTIFIER  shift, and go to state 26

    WhereClause      转到状态 59
    WhereClauseList  转到状态 60
    Column           转到状态 61


State 46

   43 SetClause: IDENTIFIER . '=' Value

    '='  shift, and go to state 62


State 47

   24 QueryStmt: UPDATE IDENTIFIER SET SetClause . WHERE WhereClauseList
   44 SetClause: SetClause . ',' IDENTIFIER '=' Value

    WHERE  shift, and go to state 63
    ','    shift, and go to state 64


State 48

   45 Column: IDENTIFIER '.' IDENTIFIER .

    $default  reduce using rule 45 (Column)


State 49

   57 TableList: IDENTIFIER .

    $default  reduce using rule 57 (TableList)


State 50

   25 QueryStmt: SELECT Selector FROM TableList . WHERE WhereClauseList
   58 TableList: TableList . ',' IDENTIFIER

    WHERE  shift, and go to state 65
    ','    shift, and go to state 66


State 51

   50 SelectorList: SelectorList ',' Column .

    $default  reduce using rule 50 (SelectorList)


State 52

   17 Field: PRIMARY . KEY '(' IDENTIFIER ')'

    KEY  shift, and go to state 67


State 53

   18 Field: CHECK . '(' CheckClauseList ')'

    '('  shift, and go to state 68


State 54

   15 Field: IDENTIFIER . Type
   16      | IDENTIFIER . Type NOT NUL

    INT      shift, and go to state 69
    VARCHAR  shift, and go to state 70
    CHAR     shift, and go to state 71

    Type  转到状态 72


State 55

   10 SysStmt: CREATE TABLE IDENTIFIER '(' FieldList . ')'
   14 FieldList: FieldList . ',' Field

    ')'  shift, and go to state 73
    ','  shift, and go to state 74


State 56

   13 FieldList: Field .

    $default  reduce using rule 13 (FieldList)


State 57

   26 ValueLists: '(' . ValueList ')'

    NUL           shift, and go to state 75
    VALUE_STRING  shift, and go to state 76
    VALUE_INT     shift, and go to state 77

    ValueList  转到状态 78
    Value      转到状态 79


State 58

   22 QueryStmt: INSERT INTO IDENTIFIER VALUES ValueLists .
   27 ValueLists: ValueLists . ',' '(' ValueList ')'

    ','  shift, and go to state 80

    $default  reduce using rule 22 (QueryStmt)


State 59

   37 WhereClauseList: WhereClause .

    $default  reduce using rule 37 (WhereClauseList)


State 60

   23 QueryStmt: DELETE FROM IDENTIFIER WHERE WhereClauseList .
   38 WhereClauseList: WhereClauseList . AND WhereClause

    AND  shift, and go to state 81

    $default  reduce using rule 23 (QueryStmt)


State 61

   33 WhereClause: Column . Operand Column
   34            | Column . Operand Value
   35            | Column . IS NUL
   36            | Column . IS NOT NUL

    IS             shift, and go to state 82
    NOT_EQUAL      shift, and go to state 83
    GREATER_EQUAL  shift, and go to state 84
    LESS_EQUAL     shift, and go to state 85
    '='            shift, and go to state 86
    '>'            shift, and go to state 87
    '<'            shift, and go to state 88

    Operand  转到状态 89


State 62

   43 SetClause: IDENTIFIER '=' . Value

    NUL           shift, and go to state 75
    VALUE_STRING  shift, and go to state 76
    VALUE_INT     shift, and go to state 77

    Value  转到状态 90


State 63

   24 QueryStmt: UPDATE IDENTIFIER SET SetClause WHERE . WhereClauseList

    IDENTIFIER  shift, and go to state 26

    WhereClause      转到状态 59
    WhereClauseList  转到状态 91
    Column           转到状态 61


State 64

   44 SetClause: SetClause ',' . IDENTIFIER '=' Value

    IDENTIFIER  shift, and go to state 92


State 65

   25 QueryStmt: SELECT Selector FROM TableList WHERE . WhereClauseList

    IDENTIFIER  shift, and go to state 26

    WhereClause      转到状态 59
    WhereClauseList  转到状态 93
    Column           转到状态 61


State 66

   58 TableList: TableList ',' . IDENTIFIER

    IDENTIFIER  shift, and go to state 94


State 67

   17 Field: PRIMARY KEY . '(' IDENTIFIER ')'

    '('  shift, and go to state 95


State 68

   18 Field: CHECK '(' . CheckClauseList ')'

    IDENTIFIER  shift, and go to state 26

    CheckClause      转到状态 96
    CheckClauseList  转到状态 97
    Column           转到状态 98


State 69

   19 Type: INT . '(' VALUE_INT ')'

    '('  shift, and go to state 99


State 70

   21 Type: VARCHAR . '(' VALUE_INT ')'

    '('  shift, and go to state 100


State 71

   20 Type: CHAR . '(' VALUE_INT ')'

    '('  shift, and go to state 101


State 72

   15 Field: IDENTIFIER Type .
   16      | IDENTIFIER Type . NOT NUL

    NOT  shift, and go to state 102

    $default  reduce using rule 15 (Field)


State 73

   10 SysStmt: CREATE TABLE IDENTIFIER '(' FieldList ')' .

    $default  reduce using rule 10 (SysStmt)


State 74

   14 FieldList: FieldList ',' . Field

    PRIMARY     shift, and go to state 52
    CHECK       shift, and go to state 53
    IDENTIFIER  shift, and go to state 54

    Field  转到状态 103


State 75

   32 Value: NUL .

    $default  reduce using rule 32 (Value)


State 76

   31 Value: VALUE_STRING .

    $default  reduce using rule 31 (Value)


State 77

   30 Value: VALUE_INT .

    $default  reduce using rule 30 (Value)


State 78

   26 ValueLists: '(' ValueList . ')'
   29 ValueList: ValueList . ',' Value

    ')'  shift, and go to state 104
    ','  shift, and go to state 105


State 79

   28 ValueList: Value .

    $default  reduce using rule 28 (ValueList)


State 80

   27 ValueLists: ValueLists ',' . '(' ValueList ')'

    '('  shift, and go to state 106


State 81

   38 WhereClauseList: WhereClauseList AND . WhereClause

    IDENTIFIER  shift, and go to state 26

    WhereClause  转到状态 107
    Column       转到状态 61


State 82

   35 WhereClause: Column IS . NUL
   36            | Column IS . NOT NUL

    NOT  shift, and go to state 108
    NUL  shift, and go to state 109


State 83

   52 Operand: NOT_EQUAL .

    $default  reduce using rule 52 (Operand)


State 84

   56 Operand: GREATER_EQUAL .

    $default  reduce using rule 56 (Operand)


State 85

   55 Operand: LESS_EQUAL .

    $default  reduce using rule 55 (Operand)


State 86

   51 Operand: '=' .

    $default  reduce using rule 51 (Operand)


State 87

   54 Operand: '>' .

    $default  reduce using rule 54 (Operand)


State 88

   53 Operand: '<' .

    $default  reduce using rule 53 (Operand)


State 89

   33 WhereClause: Column Operand . Column
   34            | Column Operand . Value

    NUL           shift, and go to state 75
    IDENTIFIER    shift, and go to state 26
    VALUE_STRING  shift, and go to state 76
    VALUE_INT     shift, and go to state 77

    Value   转到状态 110
    Column  转到状态 111


State 90

   43 SetClause: IDENTIFIER '=' Value .

    $default  reduce using rule 43 (SetClause)


State 91

   24 QueryStmt: UPDATE IDENTIFIER SET SetClause WHERE WhereClauseList .
   38 WhereClauseList: WhereClauseList . AND WhereClause

    AND  shift, and go to state 81

    $default  reduce using rule 24 (QueryStmt)


State 92

   44 SetClause: SetClause ',' IDENTIFIER . '=' Value

    '='  shift, and go to state 112


State 93

   25 QueryStmt: SELECT Selector FROM TableList WHERE WhereClauseList .
   38 WhereClauseList: WhereClauseList . AND WhereClause

    AND  shift, and go to state 81

    $default  reduce using rule 25 (QueryStmt)


State 94

   58 TableList: TableList ',' IDENTIFIER .

    $default  reduce using rule 58 (TableList)


State 95

   17 Field: PRIMARY KEY '(' . IDENTIFIER ')'

    IDENTIFIER  shift, and go to state 113


State 96

   41 CheckClauseList: CheckClause .

    $default  reduce using rule 41 (CheckClauseList)


State 97

   18 Field: CHECK '(' CheckClauseList . ')'
   42 CheckClauseList: CheckClauseList . AND CheckClause

    AND  shift, and go to state 114
    ')'  shift, and go to state 115


State 98

   39 CheckClause: Column . IN '(' ValueList ')'
   40            | Column . Operand Value

    IN             shift, and go to state 116
    NOT_EQUAL      shift, and go to state 83
    GREATER_EQUAL  shift, and go to state 84
    LESS_EQUAL     shift, and go to state 85
    '='            shift, and go to state 86
    '>'            shift, and go to state 87
    '<'            shift, and go to state 88

    Operand  转到状态 117


State 99

   19 Type: INT '(' . VALUE_INT ')'

    VALUE_INT  shift, and go to state 118


State 100

   21 Type: VARCHAR '(' . VALUE_INT ')'

    VALUE_INT  shift, and go to state 119


State 101

   20 Type: CHAR '(' . VALUE_INT ')'

    VALUE_INT  shift, and go to state 120


State 102

   16 Field: IDENTIFIER Type NOT . NUL

    NUL  shift, and go to state 121


State 103

   14 FieldList: FieldList ',' Field .

    $default  reduce using rule 14 (FieldList)


State 104

   26 ValueLists: '(' ValueList ')' .

    $default  reduce using rule 26 (ValueLists)


State 105

   29 ValueList: ValueList ',' . Value

    NUL           shift, and go to state 75
    VALUE_STRING  shift, and go to state 76
    VALUE_INT     shift, and go to state 77

    Value  转到状态 122


State 106

   27 ValueLists: ValueLists ',' '(' . ValueList ')'

    NUL           shift, and go to state 75
    VALUE_STRING  shift, and go to state 76
    VALUE_INT     shift, and go to state 77

    ValueList  转到状态 123
    Value      转到状态 79


State 107

   38 WhereClauseList: WhereClauseList AND WhereClause .

    $default  reduce using rule 38 (WhereClauseList)


State 108

   36 WhereClause: Column IS NOT . NUL

    NUL  shift, and go to state 124


State 109

   35 WhereClause: Column IS NUL .

    $default  reduce using rule 35 (WhereClause)


State 110

   34 WhereClause: Column Operand Value .

    $default  reduce using rule 34 (WhereClause)


State 111

   33 WhereClause: Column Operand Column .

    $default  reduce using rule 33 (WhereClause)


State 112

   44 SetClause: SetClause ',' IDENTIFIER '=' . Value

    NUL           shift, and go to state 75
    VALUE_STRING  shift, and go to state 76
    VALUE_INT     shift, and go to state 77

    Value  转到状态 125


State 113

   17 Field: PRIMARY KEY '(' IDENTIFIER . ')'

    ')'  shift, and go to state 126


State 114

   42 CheckClauseList: CheckClauseList AND . CheckClause

    IDENTIFIER  shift, and go to state 26

    CheckClause  转到状态 127
    Column       转到状态 98


State 115

   18 Field: CHECK '(' CheckClauseList ')' .

    $default  reduce using rule 18 (Field)


State 116

   39 CheckClause: Column IN . '(' ValueList ')'

    '('  shift, and go to state 128


State 117

   40 CheckClause: Column Operand . Value

    NUL           shift, and go to state 75
    VALUE_STRING  shift, and go to state 76
    VALUE_INT     shift, and go to state 77

    Value  转到状态 129


State 118

   19 Type: INT '(' VALUE_INT . ')'

    ')'  shift, and go to state 130


State 119

   21 Type: VARCHAR '(' VALUE_INT . ')'

    ')'  shift, and go to state 131


State 120

   20 Type: CHAR '(' VALUE_INT . ')'

    ')'  shift, and go to state 132


State 121

   16 Field: IDENTIFIER Type NOT NUL .

    $default  reduce using rule 16 (Field)


State 122

   29 ValueList: ValueList ',' Value .

    $default  reduce using rule 29 (ValueList)


State 123

   27 ValueLists: ValueLists ',' '(' ValueList . ')'
   29 ValueList: ValueList . ',' Value

    ')'  shift, and go to state 133
    ','  shift, and go to state 105


State 124

   36 WhereClause: Column IS NOT NUL .

    $default  reduce using rule 36 (WhereClause)


State 125

   44 SetClause: SetClause ',' IDENTIFIER '=' Value .

    $default  reduce using rule 44 (SetClause)


State 126

   17 Field: PRIMARY KEY '(' IDENTIFIER ')' .

    $default  reduce using rule 17 (Field)


State 127

   42 CheckClauseList: CheckClauseList AND CheckClause .

    $default  reduce using rule 42 (CheckClauseList)


State 128

   39 CheckClause: Column IN '(' . ValueList ')'

    NUL           shift, and go to state 75
    VALUE_STRING  shift, and go to state 76
    VALUE_INT     shift, and go to state 77

    ValueList  转到状态 134
    Value      转到状态 79


State 129

   40 CheckClause: Column Operand Value .

    $default  reduce using rule 40 (CheckClause)


State 130

   19 Type: INT '(' VALUE_INT ')' .

    $default  reduce using rule 19 (Type)


State 131

   21 Type: VARCHAR '(' VALUE_INT ')' .

    $default  reduce using rule 21 (Type)


State 132

   20 Type: CHAR '(' VALUE_INT ')' .

    $default  reduce using rule 20 (Type)


State 133

   27 ValueLists: ValueLists ',' '(' ValueList ')' .

    $default  reduce using rule 27 (ValueLists)


State 134

   29 ValueList: ValueList . ',' Value
   39 CheckClause: Column IN '(' ValueList . ')'

    ')'  shift, and go to state 135
    ','  shift, and go to state 105


State 135

   39 CheckClause: Column IN '(' ValueList ')' .

    $default  reduce using rule 39 (CheckClause)
